--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 	<header>
 		<p class="left" style="padding-top: 5px;">
-			<a href="">NoPixel Territory Map</a>
+			<a href="">Los Chronicals Turfs</a>
 		</p>
 		<ul class="right">
 			<div class="dropdown">
